@@ -1,8 +1,9 @@
 ﻿[B]Changelog[/B]
-Removed: iRTL channel as it is no longer supported
-Updated: RTL textures
+Fixed: sometimes a stream would not start at the beginning. Applying the VTM fix (See #820)
 
 [I]Previous changes[/I]
+Removed: iRTL channel as it is no longer supported
+Updated: RTL textures
 Fixed: RTL added a user-agent check and returns a "418 I'm a teapot" error
 Fixed: Some program listings did not work in the RTL channel on 32 bit systems
 Fixed: RTL broke their paging..and my channel (Fixes #591)
